# DoThingServer

./: CMakeLists.txt  CMakeSettings.json  Compile.sh  Connection.cpp  Connection.h  DoThingServer.cpp  DoThingServer.h
.github/workflows/: codeql-analysis.yml
